--- a/src/app/Components/view/view.component.css
+++ b/src/app/Components/view/view.component.css
@@ -1,30 +1,27 @@
-.formSec{ background: #fff; padding: 15px; }
-.downlode{
-  margin-left: 85%;
+/* .formSec{ background: #fff; padding: 15px; } */
+
+.big-container{
+  display: flex;
+}
+.containers {
+  margin-top: 1.65rem;
+  width: 80%;
+  padding: 30px 10px;
+  border: 1px solid red;
+  height:max-content;
+}
+#downlode{
+margin-left: 90%;
 }
 
-.containers {
-  margin-top: 2rem;
-  width: 100%;
-  padding: 30px 10px;
-  border: 1px solid;
-}
+.left{
+  width: 40%;
+  margin-top: 1.65rem;
+  }
 
 img{
   height: 100px;
 }
-/* .header>div {
-  vertical-align: top;
-}
-.header-text {
-  margin-left: 210px;
-
-}
-
-.logo{
-  width: fit-content;
-}
-*/
 
 .header-text>p {
   margin: 0 auto;
@@ -63,7 +60,7 @@ display: flex;
 
 .particulars p {
   font-weight: 600;
-  background-color: #3367d6;
+  /* background-color: #3367d6; */
   margin: 0;
   padding: 10px 5px;
   color: #fff;
@@ -145,5 +142,69 @@ display: flex;
   margin-bottom: 50px;
 }  */
 
+.header_title{
+  border-bottom: 1px solid black;
+}
 
+.inside-exp{
+  display: flex;
+  margin-bottom: 1%;
+}
+
+.header-input{
+  width: 100%;
+  margin-right: 5%;
+}
+
+.inputsize{
+  width: 100%;
+}
+
+/* .header-input-color{
+  margin-left: 2%;
+} */
+
+.upload-file{
+  width: 90%;
+  /* margin-right: 2%; */
+  /* border: 1px solid rgb(228, 226, 226);
+  padding-top: 1%;
+  padding-bottom: .6%;
+  border-radius: .5vh; */
+
+}
+
+.headerText{
+  height: fit-content;
+  padding: 1%;
+}
+
+.matinput{
+  width:180px;
+}
+
+.header-line{
+  /* border: solid red; */
+  /* display: flex; */
+  padding: 0;
+}
+
+.header-linee{
+  /* border: solid red; */
+  display: flex;
+
+}
+.header-lineee{
+  /* border: solid red; */
+  display: flex;
+
+}
+
+.hori-redio{
+  width: 50%;
+}
+
+mat-radio-button{
+  margin-left: 3%;
+}
 
